--- a/site-html/style.css
+++ b/site-html/style.css
@@ -1,7 +1,9 @@
 *{
 margin: 0;
 padding: 0;
-
+}
+bory{
+    font-family: 'Poppins',sans-serif;
 }
 .cabecalho {
     background-color: purple;
@@ -20,3 +22,12 @@ padding: 0;
     margin: 0 16px;
     font-size: 20px;
 }
+
+.cabecalho-lista-item a {
+    text-decoration: nome;
+    color: white;
+}
+.escola-imagem{
+    width: 25%;
+}
+
